source/stylesheets/pages/_home.scss
/*-----------------------
Left Content
-----------------------*/
.left-content{
  @include media($tablet){
    @include span-columns(4 of 12);
  }

  img{
    @include rem(margin-bottom, 30px);
    width: 80%;
    @include media($tablet){ @include rem(margin-bottom, 0); }
  }
}

/*-----------------------
Description
-----------------------*/
.description{
  @include media($tablet){
    @include span-columns(8 of 12);
  }

  .link-block{
    a{ @include rem(margin-right, 10px); }
  }

  img{
    @include rem(margin-bottom, 25px);
  }
}

/*-----------------------
Callout
-----------------------*/
.callout{
  background-color: $white-light;
  border-top: 1px solid $white-med;
  display: inline-block;
  vertical-align: middle;
  width: 100%;

  .arrow{
    @include rem(margin-top, 16px);
  }
}

/*-----------------------
Link Index
-----------------------*/
.link-index-container{

  ul{
    @include media($tablet){
     @include columns(3);
    }
    li{ list-style: none; margin: 0; }

    a{
      display: inline-block;
      @include rem(margin, 15px 0);
    }
  }
}

/*-----------------------
Page Callout
-----------------------*/

.page-callout {
  background-color: $grey-lightest;
  position: relative;

  @include media($tablet) { min-height: 100px; }

  h4, p { text-align: left; max-width: 600px; color: $grey-base; }
  h4 a{ @include font-type($primary-slab-serif, normal, 900); color: $grey-base; line-height: 1.4;}

  .image-block {
    border-bottom: 5px solid $white-base;
    height: 300px;
    @include background-size(cover);

    @include media($tablet) {
      border-bottom: none;
      height: 100%;
      @include position(absolute, 0 null 0 null);
      width: 50%;
    }
  }

  ul{
    display: inline-block;
    @include media($tablet-landscape) {
      @include rem(margin-top, -45px);
    }
  }

  .text-wrapper {
    @include base-padding;

    @include media($tablet) {
      width: 50%;
    }

    .text-content{
      @include media($tablet-landscape) {
        @include center;
        max-width: 500px;
      }
    }

    .text-block {
      list-style: none;
      margin-left: 0;
      @include rem(margin-bottom, 30px);

      @include media($tablet-landscape) {
        @include center;
        max-width: 500px;
        width: inherit;
        @include rem(margin-left, 60px);
      }

      p { @include s-small; }

      img{ display: none; }

    }
  }

  a.callout-arrow{
    background-color: rgba(0, 0, 0, 0.2);
    color: $grey-dark;
    @include position(absolute, null 0px 0px 0px);
    @include rem(padding, 12px 20px);
    opacity: 0.5;
    width: 100%;

    @include media($tablet){ width: 50%; }

    &:hover{
      background-color: rgba(0, 0, 0, 0.4);
    }

    span{
      @include media($tablet-landscape) {
        @include center;
        max-width: 500px;
        @include rem(padding-left, 60px);
      }

      &:after{
        content: "\2192";
        display: inline-block;
        @include rem(margin-left, 7px);
      }
    }
  }

  .date{ color: $white-base;}
}

.position-text {
  @include media($tablet-landscape){
    transform: translateX(-100%);
  }
}

.rotate-text {
  opacity: 0.5;
  color: $grey-base;

  @include media($tablet-landscape){
    transform: rotate(-90deg);
    transform-origin: right top;
    text-align: right;
    opacity: 0.3;
  }
}

/*-----------------------
Left Callout
-----------------------*/
.left-image{

  .text-wrapper {
    @include media($tablet) {
      margin-left: 50%;
      border-left: 5px solid $white-base;
    }
  }

  a.callout-arrow{
    @include media($tablet) {
      margin-left: 50%;
      border-left: 5px solid $white-base;
    }
  }

  .calendar-blocks{
    li{
      @include rem(margin-top, 0);
    }
  }
}

/*-----------------------
Calendar
-----------------------*/

.calendar-container{
  /*
  h3{
    border-bottom: 3px solid $grey-base;
    @include rem(margin-bottom, 15px);
    @include rem(padding-bottom, 15px);
  }*/

  .header{
    border-bottom: 3px solid $grey-base;
    display: inline-block;
    @include rem(margin-bottom, 15px);
    width: 100%;

    h3{
      @include media($tablet){
        float: left;
      }
    }

    a{
      @include rem(margin-bottom, 15px);
      @include media($tablet){
        @include rem(margin-bottom, 0px);
        float: right;
      }
    }
  }

}

.date{
  text-align: center;
  background-color: $grey-light;
  color: $white-base;
  float: left;
  @include rem(margin-right, 20px);
  @include rem(padding, 9px 11px 6px);
  line-height: 1;
  text-transform: uppercase;

  strong{
    display: block;
    font-weight: $bold;
    @include s-large;
  }
}


.calendar-blocks{
  li{
    display: inline-block;
    margin: 0;
    @include rem(margin-top, 30px);

    @include media($tablet) {
      @include span-columns(6 of 12);
      @include omega(2n);
    }
    h4 a{ line-height: 1.4; }
    p{ @include s-small; }
  }
}

.event-details{
  float: left;
  width: calc(100% - 80px);

  @include media($tablet) {  width: calc(100% - 100px); }

  img{ display: none; }
}


/*-----------------------
Featured Content
-----------------------*/
.featured-content{
  //clear: left;
  position: relative;

  .image-block {
    @include background-size(cover);
    height: 300px;

    @include media($tablet-landscape) {
      border-bottom: 5px solid white;
      border-right: 5px solid white;
      height: 100%;
      @include position(absolute, 0 null 0 null);
      width: 50%;
    }
  }
}

.feature-blocks{

  @include media($tablet) {
    border-top: 5px solid $white-base;
  }

  @include media($tablet-landscape) {
    border-top: none;
    margin-left: 50%;
    width: 50%;
  }

  h4, p, a { color: $white-base; }
  p{ @include s-small; }

  .feature-block{
    position: relative;

    &:first-child{
      background-color: $teal-base;
      border-top: 5px solid $white-base;
      border-bottom: 5px solid $white-base;

     @include media($tablet) {
      border-right: 5px solid $white-base;
      border-top: none;
      float: left;
      width: 50%;
      min-height: 250px;
     }
    }

    &:nth-child(2){
      background-color: #FF4F5C;
      border-bottom: 5px solid $white-base;

      @include media($tablet) {
       float: left;
       width: 50%;
       min-height: 250px;
      }
    }

    &:nth-child(3){
      background-color: #363A42;
      border-bottom: 5px solid $white-base;

      @include media($tablet) {
        border: none;
        width: 100%;
        display: inline-block;
        min-height: 250px;
      }

      .feature-text{
        @include media($tablet) { max-width: 600px; }
      }
    }

    .feature-text{
      @include rem(padding, 20px 20px 60px);

      @include media($tablet) {
        @include vertical-center;
      }
    }
  }

  a{
    background-color: rgba(0, 0, 0, 0.2);
    @include position(absolute, null 0px 0px 0px);
    @include rem(padding, 12px 20px);
    opacity: 0.5;
    &:hover{
      background-color: rgba(0, 0, 0, 0.4);
    }
  }
}



/*-----------------------
Image Text Container
-----------------------*/
.intro-description{
  background-color: $grey-lightest;
  @include rem(margin-top, 5px);
}

.image-text-container{
  border-bottom: 1px solid $white-med;

  &:last-of-type{ border-bottom: none; }

  h4{
    border-bottom: 2px solid $grey-base;
    display: inline-block;
  }
}



/*-----------------------
Map Container
-----------------------*/

.map-container{
  @include rem(padding-bottom, 0px);
}

.map {
  display: none;

  @include media($tablet){
    display: block;
    height: 100%;
    text-align: center;
    width: 100%;
  }

  @include media($tablet-landscape) {
    @include span-columns(10 of 12);
    @include shift(1);
  }

  path {
    fill: $white-base;
    stroke: $grey-light;
    stroke-width: 2;
    transition: .5s fill;

    &:hover {
      cursor: pointer;
      fill: $teal-base;
      stroke: $teal-base;
    }
  }
}

/*-----------------------
Main Callout
-----------------------*/
.page-callout.color-callout{
  background-color: $teal-base;
  border-bottom: 5px solid $white-base;

  .text-wrapper{
    @include rem(padding-bottom, 80px);

    h2, p, a{ color: $white-base; }
    @include media($tablet){
      @include rem(padding-bottom, 120px);
    }
  }
  a.callout-arrow{
    color: $white-base;
    span{
      @include media($tablet){ padding-left: 0; }
    }
  }
}

/*-----------------------
Three Column Secondary Features
-----------------------*/
.three-column-features-container{

  .text-block{
    @include media($tablet){
      @include span-columns(4 of 12);
    }

    p{ @include s-small; }

    img{
      @include rem(margin, 15px 0px);
      width: 65px;
      @include media($tablet){
        @include rem(margin, 0px 0px 15px);
      }
    }
  }
}

.secondary-header-container{
  @include rem(padding-bottom, 0px);

  .underline{ margin-bottom: 0px; }
}


/*-----------------------
Contact Blocks
-----------------------*/
.contact-blocks{
  .contact-info{
    @include rem(margin-top, 30px);
    @include media($tablet){
      @include rem(margin-top, 0px);
      @include span-columns(4 of 12);
    }
  }
}

.additional-contact-info{
  display: inline-block;
  @include rem(margin-top, 30px);
}

